Fixed Alignment issues and negative spaces in events page

--- a/src/styles/EventDetails.module.css
+++ b/src/styles/EventDetails.module.css
@@ -1,9 +1,3 @@
-.sponsors {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-}
 
 .img {
     position: relative;
@@ -82,9 +76,9 @@
 .main_div {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     background-color: rgba(254, 112, 98, 0.3);
-    margin: 10rem 2rem;
+    margin: 5rem 4rem;
     color: white;
     padding: 5rem 5rem;
     /* border: 1px solid var(--brand-green); */
@@ -99,13 +93,13 @@
 }
 
 .head {
-    size: 3rem;
+    font-size: 2rem;
     font-family: var(--brand-head-font);
 
 }
 
 .body {
-    size: 1rem;
+    font-size: 1.25rem;
     margin-top: 1rem;
     font-family: var(--brand-body-font);
 
@@ -116,25 +110,30 @@
         transform: translateY(-7.5%);
         flex-direction: column-reverse;
         padding: 5rem 2rem;
+
     }
 
     .wrapper {
         width: 100%;
+
     }
 
     .img {
         margin-bottom: 2rem;
+        align-self: center;
+
     }
 
-    .img .after {
+    /* .img .after {
         border-radius: 4.5rem 0px 4.5rem 0px;
-    }
+    } */
 
 }
 
 @media (max-width:600px) {
     .main_div {
         transform: translateY(-7.5%);
+        overflow: hidden;
     }
 
     .img {
@@ -144,6 +143,10 @@
         margin-bottom: 5rem;
     }
 
+    .img .after {
+        border-radius: 4.5rem 0px 4.5rem 0px;
+    }
+
     .wrapper {
         width: 100%;
     }
@@ -151,6 +154,14 @@
     .head {
         font-size: 1rem;
         padding-top: 0px;
+    }
+
+    .date {
+        font-size: 1rem;
+    }
+
+    .time {
+        font-size: 1rem;
     }
 
 }
